--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -21,6 +21,7 @@
     "notyf": "^3.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
