--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -17,6 +17,7 @@
     "axios-jwt": "^4.0.3",
     "framer-motion": "^11.18.0",
     "jwt-decode": "^4.0.0",
+    "my-react-app": "file:",
     "notif": "^0.0.1",
     "notyf": "^3.10.0",
     "react": "^18.3.1",
