--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -27,7 +27,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.16.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
